# gstreamer_train

./: Cargo.toml
src/: main.rs  pipewirethread.rs
