[package]
name = "ashpdtrain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.27.0", features = ["full"] }
ashpd = { version = "0.4.0", default-features = false, features = [
	"tokio",
	"pipewire",
	"wayland",
] }
anyhow = "1.0.70"
gstreamer = "0.20.3"
