[package]
name = "ashpdtrain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.27.0", features = ["full"] }
#ashpd = { version = "0.6.0", default-features = false, features = [
#	"tokio",
#	"pipewire",
#	"wayland",
#] }
anyhow = "1.0.70"
gstreamer = "0.20.3"
pipewire = { git = "https://gitlab.freedesktop.org/pipewire/pipewire-rs" }
libwayshot = { git = "https://github.com/waycrate/wayshot.git" }
libspa_sys = { package = "libspa-sys", git = "https://gitlab.freedesktop.org/pipewire/pipewire-rs" }
rustix = { version = "0.38.8", features = ["fs", "use-libc"] }
wayland-client = "0.30.2"
memfd = "0.6.3"
nix = "0.26.2"
env_logger = "0.10.0"
